# tg_bot_trading

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
infra/: Dockerfile
src/: main.py
src/main/: main.py
